added a color styling and hover to the ordered items.

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,14 @@
 
+.cartItem{
+    color: #0088cc;
+    cursor: pointer;
+}
+
+.cartItem:hover{
+    color: #f96816;
+    font-weight: bold;
+}
+
 .cartWell, 
 .pickup-delivery, 
 .pickupNow, 
