--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,3 @@
-
-
 body{
     background-color: #000000;
     color: #ffffff;
@@ -7,6 +5,20 @@ body{
     line-height: 1.5;
     margin: 0;
     padding: 0;
+}
+
+
+nav{
+    text-align: center;
+}
+
+nav h1{
+    text-transform: uppercase;
+    font-size: 50px;
+}
+
+nav p{
+    color: #0088cc;
 }
 
 
