--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,23 @@ nav p{
 }
 
 
+#images{
+    display: inline;
+}
+
+#img1{
+    position: absolute;
+    top: 0%;
+    left: 0;
+}
+
+#img2{
+    position: absolute;
+    top: 0%;
+    right: 0;
+}
+
+
 .cartItem{
     color: #0088cc;
     cursor: pointer;
