added a solid orange border bottom to the header and changed the main heading color and font weight to bold.

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,16 @@ body{
 }
 
 
+
+header{
+    border-bottom: #f96816 5px solid;
+}
+
+.highlight{
+    color:#f96816;
+    font-weight: bold;
+}
+
 nav{
     text-align: center;
 }
