changed the height and width of both images.

--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,11 @@ nav p{
     display: inline;
 }
 
+img{
+    height: 199px;
+    width: 199px;
+}
+
 #img1{
     position: absolute;
     top: 0%;
