added a background color to the footer and aligned the text to the center.

--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,12 @@ h2{
 }
 
 
+footer{
+    text-align: center;
+    background-color: #f96816;
+}
+
+
 .cartItem{
     color: #0088cc;
     cursor: pointer;
